@@ -10,6 +10,7 @@ SimGrid (3.12) NOT RELEASED; urgency=low
      - set_data_size(t) -> set_bytes_amount(t)
        get_data_size(t) -> get_bytes_amount(t)
    - Massive cleanups in the functions related to the energy
+     - MSG_host_get_pstate_number() -> MSG_host_get_pstate_count()
  jMSG:
  * Interface improvement:
    - Rename Host.isAvail() to Host.isOn()
